--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="pudlo">
     <center><h1>A H O J</h1>
         <div id="text-container">
-            <p id="animated-text">I am mysti - an arrogant unicorn!!</p>
+            <p id="animated-text">I am mysti - some arrogant unicorn!!</p>
         </div>
         <br>
         <p class="opis"><b>About me:</b></p>
