w przyszlosci beda blogi

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <p class="opis"><b>YouTube:</b> <a href="https://www.youtube.com/channel/UCefbxGk_YzdUBvA6-lx_kAQ" target="_blank">mystifuzz</a> | <a href="https://www.youtube.com/@mysticzny" target="_blank">mysticzny</a>
         <p class="opis"><b>Steam:</b> <a href="https://steamcommunity.com/id/mystifuzz" target="_blank">mystifuzz</a>
         <p class="opis"><b>GitHub:</b> <a href="https://github.com/mystifuzz" target="_blank">mystifuzz</a>
+        <br>
+        <p class="opis"><b>Blogs are coming out in the future.</b>
     </center>
 </div>
     <script src="tekst.js"></script>
