opis już się nie rusza ten jeden raz

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <p id="animated-text">I am mysti - some arrogant unicorn!!</p>
         </div>
         <br>
+        <div class="opis-placeholder"></div>
         <p class="opis"><b>About me:</b></p>
         <p class="opis"><b>Slav living in Poland</b>. He could be considered a <b>brony.</b><br>Has quite an interest in <b>IT</b> and <b>operating systems</b> + somewhat likes <b>networking.</b><br>Also, he <b>uploads cool content to YouTube</b> every once in a while - usually <b>tutorials</b> or <b>silly gameplays</b>.<br><br> One can reach him on Telegram - <b>@mystifuzz</b></p>
         <br>
