--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<DOCTYPE! html>
+<!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,14 +16,14 @@
         <br>
         <div class="opis-placeholder"></div>
         <p class="opis"><b>About me:</b></p>
-        <p class="opis"><b>Slav living in Poland</b>. He could be considered a <b>brony.</b><br>Has quite an interest in <b>IT</b> and <b>operating systems</b> + somewhat likes <b>networking.</b><br>Also, he <b>uploads cool content to YouTube</b> every once in a while - usually <b>tutorials</b> or <b>silly gameplays</b>.<br><br> One can reach him on Telegram - <b>@mystifuzz</b></p>
+        <p class="opis"><b>Slav living in Poland</b>. He could be considered a <b>brony.</b><br>Has quite an interest in <b>IT</b> and <b>operating systems</b> + somewhat likes <b>networking.</b><br>Also, he <b>uploads cool content to YouTube</b> every once in a while - usually <b>tutorials</b> or <b>silly gameplays</b>.</p>
+        <p class="opis">One can reach him on Telegram - <b>@mystifuzz</b></p>
+        <p class="opis" style="color: mistyrose">| MysticalBlog (W.I.P): <a href="MysticalBlogEN/index.html">English</a> | <a href="MysticalBlogPL/index.html">Polish</a> |</p>
         <br>
         <p class="opis"><b>Socials:</b></p>
-        <p class="opis"><b>YouTube:</b> <a href="https://www.youtube.com/channel/UCefbxGk_YzdUBvA6-lx_kAQ" target="_blank">mystifuzz</a> | <a href="https://www.youtube.com/@mysticzny" target="_blank">mysticzny</a>
-        <p class="opis"><b>Steam:</b> <a href="https://steamcommunity.com/id/mystifuzz" target="_blank">mystifuzz</a>
-        <p class="opis"><b>GitHub:</b> <a href="https://github.com/mystifuzz" target="_blank">mystifuzz</a>
-        <br>
-        <p class="opis"><b>Blogs are coming out in the future.</b>
+        <p class="opis" style="color: #FF7F7F"><b>YouTube:</b> <a href="https://www.youtube.com/channel/UCefbxGk_YzdUBvA6-lx_kAQ" target="_blank">mystifuzz</a> | <a href="https://www.youtube.com/@mysticzny" target="_blank">mysticzny</a>
+        <p class="opis" style="color: #ADD8E6"><b>Steam:</b> <a href="https://steamcommunity.com/id/mystifuzz" target="_blank">mystifuzz</a>
+        <p class="opis" style="color: lightgray"><b>GitHub:</b> <a href="https://github.com/mystifuzz" target="_blank">mystifuzz</a>
     </center>
 </div>
     <script src="tekst.js"></script>
