--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mystifuzz agenda</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-desktop.css" id="desktop-style">
+    <link rel="stylesheet" href="style-mobile.css" id="mobile-style" disabled>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
+    <script src="mobile.js"></script>
 <div class="pudlo">
     <center><h1>A H O J</h1>
         <div id="text-container" class="text-container">
