--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <br>
         <p class="opis"><b>About me:</b></p>
         <p class="opis"><b>Slav living in Poland</b>. He could be considered a <b>brony.</b><br>Has quite an interest in <b>IT</b> and <b>operating systems</b> + somewhat likes <b>networking.</b><br>Also, he <b>uploads cool content to YouTube</b> every once in a while - usually <b>tutorials</b> or <b>silly gameplays</b>.</p>
-        <p class="opis">One can reach him on Telegram - <b>@mystifuzz</b></p>
+        <p class="opis">One can reach him on <b><span style="color: #039be5;">Telegram</span></b> - <b><a href="https://t.me/mystifuzz" target="_blank">@mystifuzz</a></b></p>
         <br>
         <p class="opis"><b>Socials:</b></p>
         <p class="opis" style="color: #FF7F7F"><b>YouTube:</b> <a href="https://www.youtube.com/channel/UCefbxGk_YzdUBvA6-lx_kAQ" target="_blank">mystifuzz</a> | <a href="https://www.youtube.com/@mysticzny" target="_blank">mysticzny</a>
