--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="pudlo">
     <center><h1>A H O J</h1>
         <div id="text-container" class="text-container">
-            <p id="animated-text">I am mysti - some arrogant unicorn!!</p>
+            <p id="animated-text">I am mystic - some arrogant unicorn!!</p>
         </div>
         <br>
         <p class="opis"><b>About me:</b></p>
