--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         </div>
         <br>
         <p class="opis"><b>About me:</b></p>
-        <p class="opis"><b>Slav living in Poland</b>. He could be considered a <b>brony.</b><br>Has quite an interest in <b>IT</b> and <b>operating systems</b> + somewhat likes <b>networking.</b><br>Also, he <b>uploads cool content to YouTube</b> every once in a while - usually <b>tutorials</b> or <b>silly gameplays</b>.</p>
+	<p class="opis"><b>Slav living in Poland</b>. He is <b>in theory</b> a <b>brony.</b><br>Has quite an interest in <b>IT</b> and <b>operating systems</b> + somewhat likes <b>networking.</b><br>Also, he <b>uploads cool content to YouTube</b> every once in a while - usually <b>tutorials</b> or <b>silly gameplays</b>.</p>
         <p class="opis">One can reach him on <b><span style="color: #69a4c8;">Telegram</span></b> - <b><a href="https://t.me/mystifuzz" target="_blank">@mystifuzz</a></b></p>
         <br>
         <p class="opis"><b>Socials:</b></p>
-        <p class="opis" style="color: #FF7F7F"><b>YouTube:</b> <a href="https://www.youtube.com/channel/UCefbxGk_YzdUBvA6-lx_kAQ" target="_blank">mystifuzz</a> | <a href="https://www.youtube.com/@mysticzny" target="_blank">mysticzny</a>
+        <p class="opis" style="color: #FF7F7F"><b>YouTube:</b> <a href="https://www.youtube.com/channel/UCefbxGk_YzdUBvA6-lx_kAQ" target="_blank">mystifuzz</a>
         <p class="opis" style="color: #ADD8E6"><b>Steam:</b> <a href="https://steamcommunity.com/id/mystifuzz" target="_blank">mystifuzz</a>
         <p class="opis" style="color: lightgray"><b>GitHub:</b> <a href="https://github.com/mystifuzz" target="_blank">mystifuzz</a>
     </center>
