--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
+    <script src="lotto.js"></script>
     <script src="mobile.js"></script>
 <div class="pudlo">
     <center><h1>A H O J</h1>
