--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <script src="lotto.js"></script>
     <script src="mobile.js"></script>
 <div class="pudlo">
-    <center><h1>A H O J</h1>
+    <center><h1>M Y S T I F U Z Z</h1>
         <div id="text-container" class="text-container">
             <p id="animated-text">I am mystic - some arrogant unicorn!!</p>
         </div>
         <br>
-        <p class="opis"><b>About me:</b></p>
-	<p class="opis"><b>Slav living in Poland</b>. He is <b>in theory</b> a <b>brony.</b><br>Has quite an interest in <b>IT</b> and <b>operating systems</b> + somewhat likes <b>networking.</b><br>Also, he <b>uploads cool content to YouTube</b> every once in a while - usually <b>tutorials</b> or <b>silly gameplays</b>.</p> 
+        <p class="opis"><b>Currently known info:</b></p>
+	<p class="opis"><b>100% slav man living in Poland</b>.<br>Has quite an interest in <b>IT</b>, <b>operating systems</b> + somewhat likes <b>networking.</b><br>Also, he <b>uploads interesting content </b>to<b> YouTube</b> every once in a while - usually <b>tutorials</b> or <b>'meme' videos</b>.</p>
         <br>
-        <p class="opis"><b>Socials:</b></p>
+        <p class="opis"><b>Find him on:</b></p>
         <p class="opis" style="color: #FF7F7F"><b>YouTube:</b> <a href="https://www.youtube.com/channel/UCefbxGk_YzdUBvA6-lx_kAQ" target="_blank">mystifuzz</a>
         <p class="opis" style="color: #ADD8E6"><b>Steam:</b> <a href="https://steamcommunity.com/id/mystifuzz" target="_blank">mystifuzz</a>
         <p class="opis" style="color: lightgray"><b>GitHub:</b> <a href="https://github.com/mystifuzz" target="_blank">mystifuzz</a>
