--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <br>
         <p class="opis"><b>Currently known info:</b></p>
-	<p class="opis"><b>100% slav man living in Poland</b>.<br>Has quite an interest in <b>IT</b>, <b>operating systems</b> + somewhat likes <b>networking.</b><br>Also, he <b>uploads interesting content </b>to<b> YouTube</b> every once in a while - usually <b>tutorials</b> or <b>'meme' videos</b>.</p>
+	<p class="opis"><b>100% slav man living in Poland</b>.<br>Has quite an interest in <b>IT</b>, <b>operating systems</b> + somewhat likes <b>networking.</b><br>He <b>uploads interesting content </b>to<b> YouTube</b> every once in a while - usually <b>tutorials</b> or <b>'meme' videos</b>.</p>
         <br>
         <p class="opis"><b>Find him on:</b></p>
         <p class="opis" style="color: #FF7F7F"><b>YouTube:</b> <a href="https://www.youtube.com/channel/UCefbxGk_YzdUBvA6-lx_kAQ" target="_blank">mystifuzz</a>
